# StudOn-Downloader

./: .gitignore  README.md  StudOnDownloader.spec  download_studon_pdfs.py  pyproject.toml
installer/: StudOnDownloader.iss
src/studon_downloader/: __init__.py  __main__.py  core.py  gui.py
src/studon_downloader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
