[project]
name = "studon-downloader"
version = "1.0.0"
description = "Desktop helper app that downloads all PDF/download links from a StudOn page"
readme = "README.md"
authors = [{name = "StudOn Downloader Contributors"}]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
ui = ["pyinstaller>=6.3"]

[project.scripts]
studon-downloader = "studon_downloader.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
